# PyAutoPulse

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: heart-tests.yml  lib-tests.yml  pulse-health.yml  url-check.yml  workspace-validation.yml
config/: repos.yaml
docs/: release_validation.md
health_agent/: README.md  capabilities.md  capabilities.yaml  pyautobuild_boundary_audit.md
heart/: __init__.py  _color.sh  _common.sh  daemon.sh  dashboard.py  fix.py  heart_color.py  noise.py  readiness.py  state.py  status.py  tick.sh  validate.py
heart/checks/: __init__.py  ci_status.py  ci_status.sh  open_prs.sh  repo_state.sh  script_timing.py  test_run.py  url_check_live.py  url_check_live.sh  url_sweep.sh  verify_install.sh  version_skew.py  worktree_drift.sh
heart/shell/: heart_prompt.sh
pulse/: __init__.py  _color.sh  _common.sh  daemon.sh  fix.py  noise.py  pulse_color.py  readiness.py  state.py  status.py  tick.sh
pulse/checks/: __init__.py  ci_status.sh  open_prs.sh  repo_state.sh  script_timing.py  test_run.py  url_check.sh  url_check_live.py  url_check_live.sh  url_sweep.sh  verify_install.sh  version_skew.py  worktree_drift.sh
pyautoheart/: __init__.py
pyautopulse/: __init__.py
skills/audit_docs/: SKILL.md
skills/cli_noise_clean/: SKILL.md
skills/dep_audit/: SKILL.md
tests/: test_ci_status.py  test_color.py  test_dashboard.py  test_noise.py  test_readiness.py  test_repo_config.py  test_script_timing.py  test_state.py  test_test_run.py  test_url_check.py  test_validate.py  test_version_skew.py
(+7 files in other folders)
