[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyautoheart"
version = "0.1.0"
description = "Continuous-monitoring daemon for the PyAuto ecosystem"
requires-python = ">=3.10"
authors = [{name = "James Nightingale"}]
license = {text = "MIT"}
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["heart*", "pulse*", "pyautoheart*", "pyautopulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
